feat: uuid checker
